# nuitka-setuptools

./: .gitignore  .gitlab-ci.yml  nuitka_setuptools.py  setup.cfg  setup.py
tests/test_0/: setup.py
tests/test_1/: main.py  setup.py  test.bat  test.sh
tests/test_1/package1/packaging/: pyinstaller_specs.py
tests/test_1/package1/subpackage1/: submodule11.py
tests/test_1/package1/subpackage3/swigpkg/: CMakeLists.txt  myswig_module.cpp  myswig_module.h  myswig_module.i
